--- a/assets/widget.css
+++ b/assets/widget.css
@@ -62,6 +62,8 @@
 }
 
 #creative-commons-share-modal-content textarea {
+    box-sizing: border-box;
+    width: 100%;
     margin:.5em 0 2em 0;
 }
 
