--- a/blocks/button/editor.css
+++ b/blocks/button/editor.css
@@ -4,6 +4,25 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-republication-tracker-tool-button {
-	border: 1px dotted #f00;
+.wp-block-republication-tracker-tool-button.components-placeholder {
+  min-height: unset;
+}
+.wp-block-republication-tracker-tool-button .components-base-control__field {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.wp-block-republication-tracker-tool-button .components-base-control__field label {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  white-space: nowrap;
+  flex-shrink: 0;
+
+  margin-bottom: 0;
+
+  font-size: 13px;
+}
+.wp-block-republication-tracker-tool-button .components-base-control__field input {
+  flex-grow: 1;
 }
